--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -2,6 +2,8 @@
 <repositories>
   <repository path="..\BinaryProtocolConsole.\packages.config" />
   <repository path="..\BinaryProtocolConsole\packages.config" />
+  <repository path="..\Computing.Governor.Base\packages.config" />
+  <repository path="..\Computing.Node.Base\packages.config" />
   <repository path="..\Socket.BinaryCommandProcessor\packages.config" />
   <repository path="..\Sockets.Defninitions\packages.config" />
   <repository path="..\Sockets.Listener\packages.config" />
