--- a/Sockets.Listener/Sockets.Listener.csproj
+++ b/Sockets.Listener/Sockets.Listener.csproj
@@ -11,6 +11,8 @@
     <AssemblyName>Sockets.Listener</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
+    <RestorePackages>true</RestorePackages>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -70,14 +72,16 @@
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
+    <None Include="Sockets.Listener.nuspec" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Sockets.Defninitions\Sockets.Definitions.csproj">
-      <Project>{B65BAB5C-D97D-4A7F-8926-4BE095FA467B}</Project>
+      <Project>{b65bab5c-d97d-4a7f-8926-4be095fa467b}</Project>
       <Name>Sockets.Definitions</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
