--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -5,6 +5,7 @@
   <repository path="..\Computing.Governor.Base\packages.config" />
   <repository path="..\Computing.Node.Base\packages.config" />
   <repository path="..\Socket.BinaryCommandProcessor\packages.config" />
+  <repository path="..\Sockets.Client\packages.config" />
   <repository path="..\Sockets.Defninitions\packages.config" />
   <repository path="..\Sockets.Listener\packages.config" />
   <repository path="..\winapisvc\packages.config" />
