--- a/Sockets.Listener/Sockets.Listener.nuspec
+++ b/Sockets.Listener/Sockets.Listener.nuspec
@@ -10,7 +10,7 @@
     </dependencies>
   </metadata>
   <files>
-    <file src="bin\$configuration$\Sockets.Listener.dll" target="net45" />
-    <file src="bin\$configuration$\Sockets.Definitions.dll" target="net45" />
+    <file src="bin\Release\Sockets.Listener.dll" target="\lib\net45" />
+    <file src="bin\Release\Sockets.Definitions.dll" target="\lib\net45" />
   </files>
 </package>
