--- a/Sockets.Client/Apocalypse.Sockets.Client.csproj
+++ b/Sockets.Client/Apocalypse.Sockets.Client.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{B65BAB5C-D97D-4A7F-8926-4BE095FA467B}</ProjectGuid>
+    <ProjectGuid>{39A3F2A4-7966-4930-9861-B49D01C127F7}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Sockets.Definitions</RootNamespace>
-    <AssemblyName>Sockets.Definitions</AssemblyName>
+    <RootNamespace>Apocalypse.Sockets.Client</RootNamespace>
+    <AssemblyName>Apocalypse.Sockets.Client</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
@@ -32,6 +32,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Apocalypse.Sockets.Definitions">
+      <HintPath>..\packages\Apocalypse.Sockets.Definitions.1.0.0.1\lib\net45\Apocalypse.Sockets.Definitions.dll</HintPath>
+    </Reference>
     <Reference Include="ReactiveSockets">
       <HintPath>..\packages\ReactiveSockets.0.2.4\lib\net40\ReactiveSockets.dll</HintPath>
     </Reference>
@@ -57,19 +60,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BinaryMessage.cs" />
-    <Compile Include="BinaryProtoChannel.cs" />
-    <Compile Include="Cryptor.cs" />
-    <Compile Include="IBinaryCommandProcessor.cs" />
-    <Compile Include="IChannel.cs" />
-    <Compile Include="OpCodes.cs" />
+    <Compile Include="BinaryProtocolClient.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+    <None Include="Apocalypse.Sockets.Client.nuspec" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
+  <PropertyGroup>
+    <PostBuildEvent>"$(SolutionDir).nuget\nuget.exe" pack "$(ProjectDir)$(ProjectName).nuspec"</PostBuildEvent>
+  </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
