--- a/Sockets.Client/packages.config
+++ b/Sockets.Client/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Apocalypse.Sockets.Definitions" version="1.0.0.1" targetFramework="net45" />
   <package id="ReactiveSockets" version="0.2.4" targetFramework="net45" />
   <package id="Rx-Core" version="2.1.30214.0" targetFramework="net45" />
   <package id="Rx-Interfaces" version="2.1.30214.0" targetFramework="net45" />
