--- a/Sockets.Defninitions/Apocalypse.Sockets.Definitions.csproj
+++ b/Sockets.Defninitions/Apocalypse.Sockets.Definitions.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{4F28ECD0-CFB8-4020-9F2B-EDEEECF0947B}</ProjectGuid>
+    <ProjectGuid>{B65BAB5C-D97D-4A7F-8926-4BE095FA467B}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Sockets.Listener</RootNamespace>
-    <AssemblyName>Sockets.Listener</AssemblyName>
+    <RootNamespace>Apocalypse.Sockets.Definitions</RootNamespace>
+    <AssemblyName>Apocalypse.Sockets.Definitions</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
@@ -57,28 +57,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BinaryProtocolListener.cs" />
+    <Compile Include="BinaryMessage.cs" />
+    <Compile Include="BinaryProtoChannel.cs" />
+    <Compile Include="Cryptor.cs" />
+    <Compile Include="IBinaryCommandProcessor.cs" />
+    <Compile Include="IChannel.cs" />
+    <Compile Include="OpCodes.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Properties\Settings.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTimeSharedInput>True</DesignTimeSharedInput>
-      <DependentUpon>Settings.settings</DependentUpon>
-    </Compile>
   </ItemGroup>
   <ItemGroup>
-    <None Include="app.config" />
+    <None Include="Apocalypse.Sockets.Definitions.nuspec" />
     <None Include="packages.config" />
-    <None Include="Properties\Settings.settings">
-      <Generator>SettingsSingleFileGenerator</Generator>
-      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
-    </None>
-    <None Include="Sockets.Listener.nuspec" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Sockets.Defninitions\Sockets.Definitions.csproj">
-      <Project>{B65BAB5C-D97D-4A7F-8926-4BE095FA467B}</Project>
-      <Name>Sockets.Definitions</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
