--- a/Sockets.Defninitions/Apocalypse.Sockets.Definitions.nuspec
+++ b/Sockets.Defninitions/Apocalypse.Sockets.Definitions.nuspec
@@ -1,16 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <package xmlns="http://schemas.microsoft.com/packaging/2011/08/nuspec.xsd">
   <metadata>
-    <id>Sockets.Client</id>
+    <id>Apocalypse.Sockets.Definitions</id>
     <version>1.0.0.1</version>
     <authors>Uladzimir Harabtsou</authors>
-    <description>Клиент бинарного протокола</description>
+    <description>Определения бинарного протокола</description>
     <dependencies>
       <dependency id="ReactiveSockets" version="0.2.4" />
     </dependencies>
   </metadata>
   <files>
-    <file src="bin\Release\Sockets.Client.dll" target="net45" />
-    <file src="bin\Release\Sockets.Definitions.dll" target="net45" />
+    <file src="bin\Release\Apocalypse.Sockets.Definitions.dll" target="\lib\net45" />
   </files>
 </package>
