--- a/Sockets.Listener/Apocalypse.Sockets.Listener.csproj
+++ b/Sockets.Listener/Apocalypse.Sockets.Listener.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{39A3F2A4-7966-4930-9861-B49D01C127F7}</ProjectGuid>
+    <ProjectGuid>{4F28ECD0-CFB8-4020-9F2B-EDEEECF0947B}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Sockets.Client</RootNamespace>
-    <AssemblyName>Sockets.Client</AssemblyName>
+    <RootNamespace>Apocalypse.Sockets.Listener</RootNamespace>
+    <AssemblyName>Apocalypse.Sockets.Listener</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
@@ -32,6 +32,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Apocalypse.Sockets.Definitions">
+      <HintPath>..\packages\Apocalypse.Sockets.Definitions.1.0.0.1\lib\net45\Apocalypse.Sockets.Definitions.dll</HintPath>
+    </Reference>
     <Reference Include="ReactiveSockets">
       <HintPath>..\packages\ReactiveSockets.0.2.4\lib\net40\ReactiveSockets.dll</HintPath>
     </Reference>
@@ -57,18 +60,22 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BinaryProtocolClient.cs" />
+    <Compile Include="BinaryProtocolListener.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\Settings.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTimeSharedInput>True</DesignTimeSharedInput>
+      <DependentUpon>Settings.settings</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Sockets.Defninitions\Sockets.Definitions.csproj">
-      <Project>{B65BAB5C-D97D-4A7F-8926-4BE095FA467B}</Project>
-      <Name>Sockets.Definitions</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
+    <None Include="app.config" />
     <None Include="packages.config" />
-    <None Include="Sockets.Client.nuspec" />
+    <None Include="Properties\Settings.settings">
+      <Generator>SettingsSingleFileGenerator</Generator>
+      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
+    </None>
+    <None Include="Apocalypse.Sockets.Listener.nuspec" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
