--- a/Sockets.Client/Apocalypse.Sockets.Client.nuspec
+++ b/Sockets.Client/Apocalypse.Sockets.Client.nuspec
@@ -2,15 +2,15 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2011/08/nuspec.xsd">
   <metadata>
     <id>Apocalypse.Sockets.Client</id>
-    <version>1.0.0.1</version>
+    <version>1.0.0.3</version>
     <authors>Uladzimir Harabtsou</authors>
     <description>Клиент бинарного протокола</description>
     <dependencies>
       <dependency id="ReactiveSockets" version="0.2.4" />
-      <dependency id="Apocalypse.Sockets.Definitions" version="1.0.0.1" />
+      <dependency id="Apocalypse.Sockets.Definitions" version="1.0.0.2" />
     </dependencies>
   </metadata>
   <files>
-    <file src="bin\Release\Apocalypse.Sockets.Client.dll" target="net45" />
+    <file src="bin\Release\Apocalypse.Sockets.Client.dll" target="\lib\net45" />
   </files>
 </package>
