--- a/Sockets.Listener/Apocalypse.Sockets.Listener.csproj
+++ b/Sockets.Listener/Apocalypse.Sockets.Listener.csproj
@@ -34,7 +34,7 @@
   <ItemGroup>
     <Reference Include="Apocalypse.Sockets.Definitions, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\Apocalypse.Sockets.Definitions.1.0.0.2\lib\net45\Apocalypse.Sockets.Definitions.dll</HintPath>
+      <HintPath>..\packages\Apocalypse.Sockets.Definitions.1.0.0.5\lib\net45\Apocalypse.Sockets.Definitions.dll</HintPath>
     </Reference>
     <Reference Include="ReactiveSockets">
       <HintPath>..\packages\ReactiveSockets.0.2.4\lib\net40\ReactiveSockets.dll</HintPath>
@@ -76,7 +76,9 @@
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
-    <None Include="Apocalypse.Sockets.Listener.nuspec" />
+    <None Include="Apocalypse.Sockets.Listener.nuspec">
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
